# AWAx86

./: CMakeLists.txt  awa.txt  readme.md
programs/awaseembly/: example.awasm  noncomments.awsm  print_jelly.awasm  submerge.awasm
src/: awassembler.cpp  awassembler.hpp  awatismconverter.cpp  awatismconverter.hpp  codegen.hpp  exceptions.hpp  lexer.cpp  lexer.hpp  main.cpp  pipeline.cpp  pipeline.hpp  semanticanalyser.hpp  tokens.hpp  x86codegen.cpp  x86codegen.hpp
src/codegen/: x86.cpp  x86.hpp  x86runtime.txt
src/utils/: bubblering.hpp  utils.hpp
tests/awasm/: awassembler.cpp  failtests.cpp  readsfile.cpp
tests/codegen/: controlflow.cpp
tests/codegen/pilemanip/: blow.cpp  duplicate.cpp  pop.cpp
tests/lexer/: lexer.cpp
tests/utils/: bubblering.cpp
